--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-.vs/
-fonts/
-images/
-openal32.dll
-
+.vs/oboiektowka/v16/Browse.VC.db-shm
+.vs/oboiektowka/v16/Browse.VC.db-wal
+.vs/oboiektowka/v16/Browse.VC.opendb
+.vs/oboiektowka/v16/ipch/AutoPCH/48966762b11b5515/
